kubernetes-logging/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: observability
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: prometheus
spec:
  rules:
  - host: prometheus.35.232.105.32.xip.io
    http:
      paths:
      - backend:
          serviceName: prometheus-operated
          servicePort: 9090
        path: /
